--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "test-app-backend-postgre",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-     "start":"nodemon index.js",
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -11,6 +12,9 @@
   "description": "",
   "dependencies": {
     "express": "^4.19.2",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "pg": "^8.12.0",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.37.3"
   }
 }
